Details
-
Bug
-
Resolution: Fixed
-
Major
-
VirtualBox 6.1.30
-
0.4.15-dev-4380-g2d2824f https://git.reactos.org/?p=reactos.git;a=commit;h=2d2824f1b98b772eb36e4e2b75185b48cbeed618
Description
Basically clone of ticket CORE-17896, but a new regression.
- Partially degraded in 0.4.15-dev-4370-g3cb1dd8
- Completely regressed in 0.4.15-dev-4378-ga0cfdcd .. 0.4.15-dev-4380-g2d2824f
Steps to reproduce:
- Install ReactOS BootCD on VirtualBox (tested version 6.1.30)
- Install VirtualBox Guest Additions
- Get to the desktop and maximize or resize VM window
Expected: Screen size is being adjusted to VM window
Observed: Screen size is unchanged
It's possible to change screen resolution manually in the Display Properties to make it fit the VM window, just like in the previous ticket.
There is different behaviour on different commits documented below:
- 0.4.15-dev-4369-g21ddeb7 - no regression - 0.4.15-dev-4369-g21ddeb7.txt
- started in 256 colors (tracked in
CORE-18027)
on VM window resize - screen size adjusted successfully
on VM window restore - adjusted successfully
start desk.cpl - set color depth to 32-bit
on VM window resize - screen size adjusted successfully
on VM window restore - adjusted successfully
- started in 256 colors (tracked in
- 0.4.15-dev-4370-g3cb1dd8 - partially degraded - 0.4.15-dev-4370-g3cb1dd8.txt
- started in 256 colors
on VM window resize - screen size adjusted successfully
on VM window restore - screen size remained the same
start desk.cpl - not possible to change screen size after this point
start desk.cpl in debug mode - assertion and bug check- performed a reboot - set color depth to 32-bit
on VM window resize - screen size adjusted successfully
on VM window restore - adjusted successfully
- 0.4.15-dev-4378-ga0cfdcd - broken - 0.4.15-dev-4378-ga0cfdcd.txt
Assertion FALSE in /win32ss/gdi/eng/pdevobj.h, line 170
- 0.4.15-dev-4380-g2d2824f - regressed - 0.4.15-dev-4380-g2d2824f.txt
- started in 256 colors
on VM window resize - screen size remained the same
on VM window restore - screen size remained the same
start desk.cpl in normal mode - set color depth to 32-bit
start desk.cpl in debug mode - assertion and bug check
on VM window resize - screen size remained the same
on VM window restore - screen size remained the same
- 0.4.15-dev-4469-g1d66a0a - latest master - 0.4.15-dev-4469-g1d66a0a.txt
- started in 256 colors
on VM window resize - screen size remained the same
on VM window restore - screen size remained the same
start desk.cpl in normal mode - set color depth to 32-bit
start desk.cpl in debug mode - works
on VM window resize - screen size remained the same
on VM window restore - screen size remained the same
Cc hpoussin for guilty commits.
Attachments
Issue Links
- blocks
-
CORE-11263 Guest additions of VirtualBox 5.0.20 have problems with screen resolution
-
- Resolved
-
- clones
-
CORE-17896 Regresso: Screen resolution is unchanged on VM window resize with GA installed
-
- Resolved
-
- is cloned by
-
CORE-18189 VirtualBox Guest Additions screen autosize broken (again)
-
- Resolved
-
- relates to
-
CORE-18027 Regression: Screen mode becomes 8-bit (256 color) after Guest Additions installation
-
- Resolved
-