[WIN32SS] Set DISPLAY_DEVICE_PRIMARY_DEVICE flag

This flag was not set anymore since 2d2824f1b98b772eb36e4e2b75185b48cbeed618
Note that this is still wrong for multi-monitor.

CORE-18169